@@ -75,7 +75,11 @@ class TestChargedDecorator(object):
                         filter="default")._prepare()
 
     def test_universe_charged_single(self, ag):
-        ag.charges += 1
+        ag[0].charge += 1
         with pytest.raises(UserWarning):
             single_class(ag.select_atoms("name OW*"),
                          filter="error")._prepare()
+
+    def test_universe_slihghtly_charged_single(self, ag):
+        ag[0].charge += 1E-5
+        single_class(ag, filter="error")._prepare()
